--- a/index.html
+++ b/index.html
@@ -1,10 +1,87 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <titile>Привет</titile>
-    </head>
-    <body>
-        <p>привет</p>
-    </body>
+
+<head>
+    <title>Привет</title>
+    <link rel="stylesheet" href="/css/style.css">
+</head>
+
+<body>
+    <header>
+        <a class="link" href=""><span class="text">Web</span>Studio</a>
+    </header>
+    <section>
+        <nav>
+            <ul class="list">
+                <li><a href="">Студия</a></li>
+                <li><a href="">Портфолио</a></li>
+                <li><a href="">Контакты</a></li>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            </ul>
+        </nav>
+    </section>
+    <section>
+        <h1 class="title_h1">Эффективные решения для вашего бизнеса</h1>
+        <button>Заказать услугу</button>
+        <ul>
+            <li>
+                <h2 id="cat">Внимание к деталям</h2>
+                <p>Идейные соображения, а также начало повседневной работы по формированию позиции</p>
+            </li>
+            <li>
+                <h2>Пунктуальность</h2>
+                <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+            </li>
+            <li>
+                <h2>Планирование</h2>
+                <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+            </li>
+            <li>
+                <h2>Современные технологии</h2>
+                <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+            </li>
+        </ul>
+    </section>
+    <section>
+        <h2>Чем мы занимаемся</h2>
+        <ul>
+            <li><a href=""><img src="images/box 1.jpg" alt="Компьютер" width="370" /></a></li>
+            <li>
+                <img src="images/box 2.jpg" alt="Смартфон" width="370">
+            </li>
+            <li>
+                <img src="images/box 3.jpg" alt="Планшет" width="370">
+            </li>
+        </ul>
+    </section>
+    <section>
+        <h2>Наша команда</h2>
+        <ul>
+            <li>
+                <img src="/images/team card 1.jpg" alt="Мужчина в очках" width="270">
+            </li>
+
+            <li><img src="/images/team card 2.jpg" alt="Женщина в очках" width="270"></li>
+
+            <li><img src="/images/team card 3.jpg" alt="Мужчина" width="270"></li>
+
+            <li><img src="/images/team card 4.jpg" alt="Мужчина в очках" width="270"></li>
+
+        </ul>
+
+    </section>
+    <footer>
+
+        <a href="">WebStudio</a>
+        <address>г. Киев, пр-т Леси Украинки, 26 </address>
+        <address>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="tel:+380961111111">+38 096 111 11 11</a>
+
+        </address>
+
+    </footer>
+</body>
 
 </html>
