--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
                 <li><a href="">Студия</a></li>
                 <li><a href="">Портфолио</a></li>
                 <li><a href="">Контакты</a></li>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+                <li><a class="link-contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="link-contact" href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
         </nav>
     </section>
@@ -26,37 +26,41 @@
         <button>Заказать услугу</button>
         <ul>
             <li>
-                <h2 id="cat">Внимание к деталям</h2>
-                <p>Идейные соображения, а также начало повседневной работы по формированию позиции</p>
+                <h2 class="decisions-title">Внимание к деталям</h2>
+                <p class="decisions-text">Идейные соображения, а также начало повседневной работы по формированию
+                    позиции</p>
             </li>
             <li>
-                <h2>Пунктуальность</h2>
-                <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                <h2 class="decisions-title">Пунктуальность</h2>
+                <p class="decisions-text">Задача организации, в особенности же рамки и место обучения кадров влечет за
+                    собой.</p>
             </li>
             <li>
-                <h2>Планирование</h2>
-                <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                <h2 class="decisions-title">Планирование</h2>
+                <p class="decisions-text">Равным образом консультация с широким активом в значительной степени
+                    обуславливает.</p>
             </li>
             <li>
-                <h2>Современные технологии</h2>
-                <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                <h2 class="decisions-title">Современные технологии</h2>
+                <p class="decisions-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+                </p>
             </li>
         </ul>
     </section>
     <section>
-        <h2>Чем мы занимаемся</h2>
+        <h2 class="then-title">Чем мы занимаемся</h2>
         <ul>
-            <li><a href=""><img src="images/box 1.jpg" alt="Компьютер" width="370" /></a></li>
+            <li><a href=""><img src="/images/box 1.jpg" alt="Компьютер" width="370" /></a></li>
             <li>
-                <img src="images/box 2.jpg" alt="Смартфон" width="370">
+                <img src="/images/box 2.jpg" alt="Смартфон" width="370">
             </li>
             <li>
-                <img src="images/box 3.jpg" alt="Планшет" width="370">
+                <img src="/images/box 3.jpg" alt="Планшет" width="370">
             </li>
         </ul>
     </section>
     <section>
-        <h2>Наша команда</h2>
+        <h2 class="then-title">Наша команда</h2>
         <ul>
             <li>
                 <img src="/images/team card 1.jpg" alt="Мужчина в очках" width="270">
