--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <section>
         <h1 class="title_h1">Эффективные решения для вашего бизнеса</h1>
         <button>Заказать услугу</button>
-        <ul>
+        <ul class="title-ul">
             <li>
                 <h2 class="decisions-title">Внимание к деталям</h2>
                 <p class="decisions-text">Идейные соображения, а также начало повседневной работы по формированию
@@ -49,7 +49,7 @@
     </section>
     <section>
         <h2 class="then-title">Чем мы занимаемся</h2>
-        <ul>
+        <ul class="then-ul">
             <li><a href=""><img src="/images/box 1.jpg" alt="Компьютер" width="370" /></a></li>
             <li>
                 <img src="/images/box 2.jpg" alt="Смартфон" width="370">
@@ -60,8 +60,8 @@
         </ul>
     </section>
     <section>
-        <h2 class="then-title">Наша команда</h2>
-        <ul>
+        <h2 class="team-title">Наша команда</h2>
+        <ul class="team-ul">
             <li>
                 <img src="/images/team card 1.jpg" alt="Мужчина в очках" width="270">
             </li>
