--- a/index.html
+++ b/index.html
@@ -50,34 +50,48 @@
     <section>
         <h2 class="then-title">Чем мы занимаемся</h2>
         <ul class="then-ul">
-            <li><a href=""><img src="/images/box 1.jpg" alt="Компьютер" width="370" /></a></li>
+            <li><a href=""><img src="/img/comp1.png" alt="Компьютер" width="370" /></a></li>
             <li>
-                <img src="/images/box 2.jpg" alt="Смартфон" width="370">
+                <img src="img/comp2.png" alt="Смартфон" width="370">
             </li>
             <li>
-                <img src="/images/box 3.jpg" alt="Планшет" width="370">
+                <img src="img/comp3.png" alt="Планшет" width="370">
             </li>
         </ul>
     </section>
     <section>
         <h2 class="team-title">Наша команда</h2>
         <ul class="team-ul">
-            <li>
-                <img src="/images/team card 1.jpg" alt="Мужчина в очках" width="270">
+            <li class="team-li">
+                <img src="img/img.jpg" alt="Мужчина в очках" width="270">
+                <h3 class="team-li-name">Игорь Демьяненко</h3>
+                <p class="team-li-text">Product Designer</p>
             </li>
 
-            <li><img src="/images/team card 2.jpg" alt="Женщина в очках" width="270"></li>
+            <li>
+                <img src="img/img(1).jpg" alt="Женщина в очках" width="270">
+                <h3 class="team-li-name">Ольга Репина</h3>
+                <p class="team-li-text">Frontend Developer</p>
+            </li>
 
-            <li><img src="/images/team card 3.jpg" alt="Мужчина" width="270"></li>
+            <li>
+                <img src="img/img(2).jpg" alt="Мужчина" width="270">
+                <h3 class="team-li-name">Николай Тарасов</h3>
+                <p class="team-li-text">Marketing</p>
+            </li>
 
-            <li><img src="/images/team card 4.jpg" alt="Мужчина в очках" width="270"></li>
+            <li>
+                <img src="img/img(3).jpg" alt="Мужчина в очках" width="270">
+                <h3 class="team-li-name">Михаил Ермаков</h3>
+                <p class="team-li-text">UI Designe</p>
+            </li>
 
         </ul>
 
     </section>
     <footer>
 
-        <a href="">WebStudio</a>
+        <a class="link" href=""><span class="text">Web</span>Studio</a>
         <address>г. Киев, пр-т Леси Украинки, 26 </address>
         <address>
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
