--- a/link.html
+++ b/link.html
@@ -5,6 +5,11 @@
         <meta charset="utf8">
         <title>Задание для зайца</title>
         <link rel="stylesheet" href="css/style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Palette+Mosaic&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;500;600;700&family=Lobster&display=swap"
+            rel="stylesheet">
     </head>
 
     <body>
@@ -30,13 +35,20 @@
             </div>
         </header>
         <main>
+            <p class="main-p">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente nesciunt minus unde rem blanditiis
+                nemo eligendi, facilis, a deserunt amet velit aspernatur ad labore nihil provident voluptatum natus
+                placeat ipsam tempora! Dolores ipsam fugit quidem molestias qui libero modi, iusto dicta vitae
+                necessitatibus voluptatum tempore sit beatae ex optio dolor!lorem20
+
+            </p>
             <div>
                 <h1>Доставка еды вам в РОТ</h1>
                 <p>Доставка для самых ленивых людей</p>
                 <a href="/">Сделать заказ</a>
             </div>
             <div>
-                <img src="/img/delivery.jpg" alt="delivery" width="320px">
+                <img src="img/delivery.jpg" alt="delivery" width="320px">
             </div>
             <section>
                 <h2>Цены на достаку</h2>
