--- a/block.html
+++ b/block.html
@@ -5,11 +5,9 @@
     <meta charset="utf8">
     <link rel="stylesheet" href="css/block.css">
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;500;600;700&display=swap" rel="stylesheet">
-
-</head>
-
-<body>
-    <div class="page">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+        </head> <body>
+    <!-- <div class="page">
         <div class="block1">
             <h1>Пример шрифта <span>№1</span></h1>
             <a href="https://fonts.google.com/?subset=cyrillic" target="_blanck">ссылка на шрифты</a>
@@ -29,7 +27,31 @@
                 voluptates obcaecati maiores sunt tempora tempore doloremque dicta adipisci inventore ratione autem,
                 eligendi quas reiciendis iste? Reprehenderit, quasi voluptate. Officia, sequi voluptas.</p>
         </div>
+    </div> -->
+
+    <!-- <div class="look">
+        <div class="box">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias, recusandae.</p>
+        </div>
+        <div class="box1">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias, recusandae.</p>
+        </div>
+
+    </div> -->
+    <header class="page-header">
+        <a href="" class="logo">Logo</a>
+
+        <ul class="menu">
+            <li class="item"><a href="" class="link">Home page</a></li>
+            <li class="item"><a href="" class="link">Blog</a></li>
+            <li class="item"><a href="" class="link">Podcasts</a></li>
+            <li class="item"><a href="" class="link">Contacts</a></li>
+        </ul>
+    </header>
+    <div class="container">
+        <aside class="sidebar">Sidebar</aside>
+        <main class="content">Main content</main>
     </div>
-</body>
+    </body>
 
 </html>
