--- a/link.html
+++ b/link.html
@@ -19,6 +19,7 @@
                     <img class="logo-img" src="img/logo.png" alt="logo" width="130px">
                     <p class="logo-text">БЫСТРАЯ <span> ДОСТАВКА </span></p>
                 </a>
+                <button type="s"></button>
             </div>
             <nav>
                 <ul class="nav-ul">
