--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 
 <head>
-    <title>Привет</title>
+    <title>HTML_HW#1</title>
+    <meta charset="utf8">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -22,34 +23,40 @@
         </nav>
     </section>
     <section>
-        <h1 class="title_h1">Эффективные решения для вашего бизнеса</h1>
-        <button>Заказать услугу</button>
-        <ul class="title-ul">
-            <li>
-                <h2 class="decisions-title">Внимание к деталям</h2>
-                <p class="decisions-text">Идейные соображения, а также начало повседневной работы по формированию
-                    позиции</p>
-            </li>
-            <li>
-                <h2 class="decisions-title">Пунктуальность</h2>
-                <p class="decisions-text">Задача организации, в особенности же рамки и место обучения кадров влечет за
-                    собой.</p>
-            </li>
-            <li>
-                <h2 class="decisions-title">Планирование</h2>
-                <p class="decisions-text">Равным образом консультация с широким активом в значительной степени
-                    обуславливает.</p>
-            </li>
-            <li>
-                <h2 class="decisions-title">Современные технологии</h2>
-                <p class="decisions-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.
-                </p>
-            </li>
-        </ul>
+        <div class="content">
+            <h1 class="content-title">Эффективные решения для вашего бизнеса</h1>
+            <button type="button">Заказать услугу</button>
+        </div>
+        <div class="advantages">
+            <ul class="advantages-ul">
+                <li>
+                    <h2 class="advantages-title">Внимание к деталям</h2>
+                    <p class="advantages-text">Идейные соображения, а также начало повседневной работы по формированию
+                        позиции</p>
+                </li>
+                <li>
+                    <h2 class="advantages-title">Пунктуальность</h2>
+                    <p class="advantages-text">Задача организации, в особенности же рамки и место обучения кадров влечет
+                        за
+                        собой.</p>
+                </li>
+                <li>
+                    <h2 class="advantages-title">Планирование</h2>
+                    <p class="advantages-text">Равным образом консультация с широким активом в значительной степени
+                        обуславливает.</p>
+                </li>
+                <li>
+                    <h2 class="advantages-title">Современные технологии</h2>
+                    <p class="advantages-text">Значимость этих проблем настолько очевидна, что реализация плановых
+                        заданий.
+                    </p>
+                </li>
+            </ul>
+        </div>
     </section>
     <section>
         <h2 class="then-title">Чем мы занимаемся</h2>
-        <ul class="then-ul">
+        <ul class="then-list">
             <li><a href=""><img src="/img/comp1.png" alt="Компьютер" width="370" /></a></li>
             <li>
                 <img src="img/comp2.png" alt="Смартфон" width="370">
@@ -67,38 +74,30 @@
                 <h3 class="team-li-name">Игорь Демьяненко</h3>
                 <p class="team-li-text">Product Designer</p>
             </li>
-
             <li>
                 <img src="img/img(1).jpg" alt="Женщина в очках" width="270">
                 <h3 class="team-li-name">Ольга Репина</h3>
                 <p class="team-li-text">Frontend Developer</p>
             </li>
-
             <li>
                 <img src="img/img(2).jpg" alt="Мужчина" width="270">
                 <h3 class="team-li-name">Николай Тарасов</h3>
                 <p class="team-li-text">Marketing</p>
             </li>
-
             <li>
                 <img src="img/img(3).jpg" alt="Мужчина в очках" width="270">
                 <h3 class="team-li-name">Михаил Ермаков</h3>
                 <p class="team-li-text">UI Designe</p>
             </li>
-
         </ul>
-
     </section>
     <footer>
-
         <a class="link" href=""><span class="text">Web</span>Studio</a>
         <address>г. Киев, пр-т Леси Украинки, 26 </address>
         <address>
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
             <a href="tel:+380961111111">+38 096 111 11 11</a>
-
         </address>
-
     </footer>
 </body>
 
