--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <header>
-        <a class="link" href=""><span class="text">Web</span>Studio</a>
+        <a href=""><span class="text">Web</span>Studio</a>
     </header>
     <section>
         <nav>
@@ -17,17 +17,17 @@
                 <li><a href="">Студия</a></li>
                 <li><a href="">Портфолио</a></li>
                 <li><a href="">Контакты</a></li>
-                <li><a class="link-contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="link-contact" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
         </nav>
     </section>
     <section>
         <div class="content">
-            <h1 class="content-title">Эффективные решения для вашего бизнеса</h1>
+            <h1>Эффективные решения для вашего бизнеса</h1>
             <button type="button">Заказать услугу</button>
         </div>
-        <div class="advantages">
+        <div>
             <ul class="advantages-ul">
                 <li>
                     <h2 class="advantages-title">Внимание к деталям</h2>
@@ -55,8 +55,8 @@
         </div>
     </section>
     <section>
-        <h2 class="then-title">Чем мы занимаемся</h2>
-        <ul class="then-list">
+        <h2>Чем мы занимаемся</h2>
+        <ul>
             <li><a href=""><img src="/img/comp1.png" alt="Компьютер" width="370" /></a></li>
             <li>
                 <img src="img/comp2.png" alt="Смартфон" width="370">
@@ -67,32 +67,32 @@
         </ul>
     </section>
     <section>
-        <h2 class="team-title">Наша команда</h2>
-        <ul class="team-ul">
-            <li class="team-li">
+        <h2>Наша команда</h2>
+        <ul>
+            <li>
                 <img src="img/img.jpg" alt="Мужчина в очках" width="270">
-                <h3 class="team-li-name">Игорь Демьяненко</h3>
-                <p class="team-li-text">Product Designer</p>
+                <h3>Игорь Демьяненко</h3>
+                <p>Product Designer</p>
             </li>
             <li>
                 <img src="img/img(1).jpg" alt="Женщина в очках" width="270">
-                <h3 class="team-li-name">Ольга Репина</h3>
-                <p class="team-li-text">Frontend Developer</p>
+                <h3>Ольга Репина</h3>
+                <p>Frontend Developer</p>
             </li>
             <li>
                 <img src="img/img(2).jpg" alt="Мужчина" width="270">
-                <h3 class="team-li-name">Николай Тарасов</h3>
-                <p class="team-li-text">Marketing</p>
+                <h3>Николай Тарасов</h3>
+                <p>Marketing</p>
             </li>
             <li>
                 <img src="img/img(3).jpg" alt="Мужчина в очках" width="270">
-                <h3 class="team-li-name">Михаил Ермаков</h3>
-                <p class="team-li-text">UI Designe</p>
+                <h3>Михаил Ермаков</h3>
+                <p>UI Designe</p>
             </li>
         </ul>
     </section>
     <footer>
-        <a class="link" href=""><span class="text">Web</span>Studio</a>
+        <a href=""><span class="text">Web</span>Studio</a>
         <address>г. Киев, пр-т Леси Украинки, 26 </address>
         <address>
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
