--- a/index.html
+++ b/index.html
@@ -3,98 +3,99 @@
 
 <head>
     <title>HTML_HW#1</title>
-    <meta charset="utf8">
+    <meta charset="utf-8">
     <link rel="stylesheet" href="css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
     <header>
         <a href=""><span class="text">Web</span>Studio</a>
-    </header>
-    <section>
         <nav>
             <ul class="list">
                 <li><a href="">Студия</a></li>
                 <li><a href="">Портфолио</a></li>
                 <li><a href="">Контакты</a></li>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+                
             </ul>
         </nav>
-    </section>
-    <section>
-        <div class="content">
-            <h1>Эффективные решения для вашего бизнеса</h1>
-            <button type="button">Заказать услугу</button>
-        </div>
         <div>
-            <ul class="advantages-ul">
-                <li>
-                    <h2 class="advantages-title">Внимание к деталям</h2>
-                    <p class="advantages-text">Идейные соображения, а также начало повседневной работы по формированию
-                        позиции</p>
-                </li>
-                <li>
-                    <h2 class="advantages-title">Пунктуальность</h2>
-                    <p class="advantages-text">Задача организации, в особенности же рамки и место обучения кадров влечет
-                        за
-                        собой.</p>
-                </li>
-                <li>
-                    <h2 class="advantages-title">Планирование</h2>
-                    <p class="advantages-text">Равным образом консультация с широким активом в значительной степени
-                        обуславливает.</p>
-                </li>
-                <li>
-                    <h2 class="advantages-title">Современные технологии</h2>
-                    <p class="advantages-text">Значимость этих проблем настолько очевидна, что реализация плановых
-                        заданий.
-                    </p>
-                </li>
-            </ul>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </div>
-    </section>
-    <section>
-        <h2>Чем мы занимаемся</h2>
-        <ul>
-            <li><a href=""><img src="/img/comp1.png" alt="Компьютер" width="370" /></a></li>
-            <li>
-                <img src="img/comp2.png" alt="Смартфон" width="370">
-            </li>
-            <li>
-                <img src="img/comp3.png" alt="Планшет" width="370">
-            </li>
-        </ul>
-    </section>
-    <section>
-        <h2>Наша команда</h2>
-        <ul>
-            <li>
-                <img src="img/img.jpg" alt="Мужчина в очках" width="270">
-                <h3>Игорь Демьяненко</h3>
-                <p>Product Designer</p>
-            </li>
-            <li>
-                <img src="img/img(1).jpg" alt="Женщина в очках" width="270">
-                <h3>Ольга Репина</h3>
-                <p>Frontend Developer</p>
-            </li>
-            <li>
-                <img src="img/img(2).jpg" alt="Мужчина" width="270">
-                <h3>Николай Тарасов</h3>
-                <p>Marketing</p>
-            </li>
-            <li>
-                <img src="img/img(3).jpg" alt="Мужчина в очках" width="270">
-                <h3>Михаил Ермаков</h3>
-                <p>UI Designe</p>
-            </li>
-        </ul>
-    </section>
+    </header>
+    <main>
+            <section>
+                    <h1>Эффективные решения для вашего бизнеса</h1>
+                    <button type="button">Заказать услугу</button>
+            </section>
+            <section>
+                    <ul class="advantages-ul">
+                        <li>
+                            <h2 class="advantages-title">Внимание к деталям</h2>
+                            <p class="advantages-text">Идейные соображения, а также начало повседневной работы по формированию
+                                позиции</p>
+                        </li>
+                        <li>
+                            <h2 class="advantages-title">Пунктуальность</h2>
+                            <p class="advantages-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                        </li>
+                        <li>
+                            <h2 class="advantages-title">Планирование</h2>
+                            <p class="advantages-text">Равным образом консультация с широким активом в значительной степени
+                                обуславливает.</p>
+                        </li>
+                        <li>
+                            <h2 class="advantages-title">Современные технологии</h2>
+                            <p class="advantages-text">Значимость этих проблем настолько очевидна, что реализация плановых
+                                заданий.
+                            </p>
+                        </li>
+                    </ul>
+            </section>
+            
+            <section>
+                <h3>Чем мы занимаемся</h3>
+                <ul>
+                    <li><img src="/img/comp1.jpg" alt="Компьютер" width="370" /></li>
+                    <li>
+                        <img src="img/comp2.jpg" alt="Смартфон" width="370">
+                    </li>
+                    <li>
+                        <img src="img/comp3.jpg" alt="Планшет" width="370">
+                    </li>
+                </ul>
+            </section>
+            <section>
+                <h4>Наша команда</h4>
+                <ul>
+                    <li>
+                        <img src="img/img.jpg" alt="Мужчина в очках" width="270">
+                        <h4>Игорь Демьяненко</h4>
+                        <p>Product Designer</p>
+                    </li>
+                    <li>
+                        <img src="img/img(1).jpg" alt="Женщина в очках" width="270">
+                        <h4>Ольга Репина</h4>
+                        <p>Frontend Developer</p>
+                    </li>
+                    <li>
+                        <img src="img/img(2).jpg" alt="Мужчина" width="270">
+                        <h4>Николай Тарасов</h4>
+                        <p>Marketing</p>
+                    </li>
+                    <li>
+                        <img src="img/img(3).jpg" alt="Мужчина в очках" width="270">
+                        <h4>Михаил Ермаков</h4>
+                        <p>UI Designe</p>
+                    </li>
+                </ul>
+            </section>
+    </main>
     <footer>
         <a href=""><span class="text">Web</span>Studio</a>
-        <address>г. Киев, пр-т Леси Украинки, 26 </address>
         <address>
+            <p>г. Киев, пр-т Леси Украинки, 26 </p>
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
             <a href="tel:+380961111111">+38 096 111 11 11</a>
         </address>
