--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <section>
                 <h3>Чем мы занимаемся</h3>
                 <ul>
-                    <li><img src="/img/comp1.jpg" alt="Компьютер" width="370" /></li>
+                    <li><img src="img/comp1.jpg" alt="Компьютер" width="370" /></li>
                     <li>
                         <img src="img/comp2.jpg" alt="Смартфон" width="370">
                     </li>
