--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             </ul>
         </nav>
         <div>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+           <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="tel:+380961111111">+38 096 111 11 11</a>
         </div>
     </header>
     <main>
@@ -30,23 +30,25 @@
                     <button type="button">Заказать услугу</button>
             </section>
             <section>
+
+                    <h2>Особенности</h2>
                     <ul class="advantages-ul">
                         <li>
-                            <h2 class="advantages-title">Внимание к деталям</h2>
+                            <h3 class="advantages-title">Внимание к деталям</h3>
                             <p class="advantages-text">Идейные соображения, а также начало повседневной работы по формированию
                                 позиции</p>
                         </li>
                         <li>
-                            <h2 class="advantages-title">Пунктуальность</h2>
+                            <h3 class="advantages-title">Пунктуальность</h3>
                             <p class="advantages-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                         </li>
                         <li>
-                            <h2 class="advantages-title">Планирование</h2>
+                            <h3 class="advantages-title">Планирование</h3>
                             <p class="advantages-text">Равным образом консультация с широким активом в значительной степени
                                 обуславливает.</p>
                         </li>
                         <li>
-                            <h2 class="advantages-title">Современные технологии</h2>
+                            <h3 class="advantages-title">Современные технологии</h3>
                             <p class="advantages-text">Значимость этих проблем настолько очевидна, что реализация плановых
                                 заданий.
                             </p>
@@ -55,7 +57,7 @@
             </section>
             
             <section>
-                <h3>Чем мы занимаемся</h3>
+                <h2>Чем мы занимаемся</h2>
                 <ul>
                     <li><img src="img/comp1.jpg" alt="Компьютер" width="370" /></li>
                     <li>
@@ -67,26 +69,26 @@
                 </ul>
             </section>
             <section>
-                <h4>Наша команда</h4>
+                <h2>Наша команда</h2>
                 <ul>
                     <li>
                         <img src="img/img.jpg" alt="Мужчина в очках" width="270">
-                        <h4>Игорь Демьяненко</h4>
+                        <h3>Игорь Демьяненко</h3>
                         <p>Product Designer</p>
                     </li>
                     <li>
                         <img src="img/img(1).jpg" alt="Женщина в очках" width="270">
-                        <h4>Ольга Репина</h4>
+                        <h3>Ольга Репина</h3>
                         <p>Frontend Developer</p>
                     </li>
                     <li>
                         <img src="img/img(2).jpg" alt="Мужчина" width="270">
-                        <h4>Николай Тарасов</h4>
+                        <h3>Николай Тарасов</h3>
                         <p>Marketing</p>
                     </li>
                     <li>
                         <img src="img/img(3).jpg" alt="Мужчина в очках" width="270">
-                        <h4>Михаил Ермаков</h4>
+                        <h3>Михаил Ермаков</h3>
                         <p>UI Designe</p>
                     </li>
                 </ul>
